--- a/demos/standard/index.html
+++ b/demos/standard/index.html
@@ -14,6 +14,7 @@
                 console.log("PageTotalHeight :", Me.help.getTotalH());
                 console.log("HasVerticalScroll :", Me.help.hasVScroll());
                 console.log("HasHorizontalScroll :", Me.help.hasHScroll());
+                console.log("Scrollbar :", Me.help.getScrollbarSize());
             }).resize();
         });
     </script>
