--- a/demos/standard/index.html
+++ b/demos/standard/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="../../vendor/jquery-1.9.1.min.js"></script>
-    <script src="../../src/helpMe.js"></script>
+    <script src="../../src/me.help.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function(){
